  - googleapis-common-protos 1.60.0 -> 1.61.0
  - meraki 1.37.2 -> 1.38.0
  - packaging 23.1 -> 23.2
  - pillow 10.0.1 -> 10.1.0
  - protobuf 4.24.3 -> 4.24.4
  - pytz deleted
  - s3transfer 0.6.2 -> 0.7.0
  - sqlparse 0.2.4 -> 0.4.4
  - urllib3 1.26.17 -> 1.26.18
  - werkzeug 2.3.7 -> 3.0.0
- [API] [PF] Changed old PF whitelist/blacklist from config to new API entrypoint 'api/v1/system/pf/'
### Fixed
- [PORTAL] [IDP] Refresh token validation with multiple IDP
- [FRONTEND] Disable log condition if log forwarder disabled
- [REPUTATION_CTX] Invalid headers templating
- [PORTAL] [SSO] Avoid autologon password retrieval failures
- [API_PARSER] [TRENDMICRO_VISIONONE] Fix Alerts endpoint params
- [API] [CLUSTER_CONFIG] Add missing allowed fields for API PATCHing
- [SETTINGS] Update CSRF_TRUSTED_ORIGINS format for Django 4
- [URLS] Simplification of different paths
- [DEPRECATION] Change request.META to request.headers
- [DEPRECATION] get_random_string now requires length argument
- [DEPRECATION] Keyword "trans" replaced by "translate" in templates
- [DEPRECATION] make_aware function changed to django aware datetime
- [API] [OPENID] Correctly handle form errors during API modifications


## [2.11.1] - 2023-10-13
### Added
- [GUI] [FRONTEND] New field for custom proxy to use with an api parser
- [LOGOM] Add queue control options
  - Max Workers
  - New Worker start condition
  - Worker shutdown inactivity condition
  - Queue shutdown timeout
### Changed
- [DEPENDENCIES] Python dependencies upgrade
  - aiohttp 3.8.4 -> 3.8.5
  - async-timeout 4.0.2 -> 4.0.3
  - boto3 1.26.147 -> 1.28.52
  - botocore 1.29.147 -> 1.31.52
  - captcha 0.4 -> 0.5.0
  - certifi 2023.5.7 -> 2023.7.22
  - charset-normalizer 3.1.0 -> 3.2.0
  - configparser 5.3.0 -> 6.0.0
  - cryptography 41.0.2 -> 41.0.4
  - django 3.2.20 -> 3.2.22
  - decorator 5.1.1 -> removed
  - frozenlist 1.3.3 -> 1.4.0
  - google-api-core 2.11.0 -> 2.11.1
  - google-api-python-client 2.88.0 -> 2.100.0